--- a/force-app/main/default/lwc/container/container.html
+++ b/force-app/main/default/lwc/container/container.html
@@ -3,16 +3,30 @@
 
     <div class="main">
         <div class="slds-grid slds-wrap slds-m-horizontal_small">
-            <lightning-input type="date" name="input1" label="Enter a minimum date" value={minDate}></lightning-input>
-            <div class="slds-box">
-                <c-calendar
-                    name="test"
-                    value={dateContext}
-                    min={minDate}
-                    onselectionchange={handleChangeDate}>
-                </c-calendar>
-            </div>   
-            <lightning-input type="date" name="input1" label="Date Selected:" value={dateSelected} readonly></lightning-input>         
+            <div class="slds-col slds-size_2-of-4">
+
+                <div class="slds-form-element slds-form-element_stacked slds-m-top_small">
+                    <lightning-input type="date" name="input1" label="Enter a minimum date" value={minDate}></lightning-input>
+                </div>
+
+                <div class="slds-form-element slds-form-element_stacked slds-m-top_small">
+                    <div class="slds-box">
+                        <c-calendar
+                            name="test"
+                            value={dateContext}
+                            min={minDate}
+                            onselectionchange={handleChangeDate}>
+                        </c-calendar>
+                    </div>
+                </div>
+            </div>
+
+            <div class="slds-col slds-size_2-of-2">
+                <div class="slds-form-element slds-form-element_stacked slds-m-top_small">
+                    <lightning-input type="date" name="input1" label="Date Selected:" value={dateSelected} readonly></lightning-input>
+                </div>
+            </div>
+            
         </div>
     </div>
     
