Adds logic to set a max date

--- a/force-app/main/default/lwc/container/container.html
+++ b/force-app/main/default/lwc/container/container.html
@@ -15,6 +15,7 @@
                             name="test"
                             value={dateContext}
                             min={minDate}
+                            max={maxDate}
                             onselectionchange={handleChangeDate}>
                         </c-calendar>
                     </div>
